--- a/styles/_filters.scss
+++ b/styles/_filters.scss
@@ -4,17 +4,23 @@
     top: 5px;
     padding: 20px;
     .fa-chevron-down {
-      transition: all 0.4s ease-in-out;
-      left: 45%;
+      color: $green;
+      transition: all 0.3s ease-in-out;
+      left: 35%;
+      &:hover {
+        transition: all 0.3s ease-in-out;
+        color: $dark-grey;
+        cursor: pointer;
+      } 
     }
 
     .chev-rotate {
-      transition: all 0.4s ease-in-out;
+      transition: all 0.3s ease-in-out;
       transform: rotate(180deg);
     }
 
     .chev-rotate-again {
-      transition: all 0.4s ease-in-out;
+      transition: all 0.3s ease-in-out;
       transform: rotate(360deg);
     }
   }
